# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-0294333bd8aabb931a760f6dc8d7d364fff6f8dece6d21e222e741d152f03fcf.json  query-41217b0611483220734ea5a6c864a7661cb502ed67378980561a6b76f61212d9.json  query-538e9fb02520a735dba447e5c276b89f69d3a3d0b63bd3808791d873736523e3.json  query-c5b1a2bc86451cd2cfeefc1a9088284971001b986519096752fa1316924d50bb.json  query-efb14ed4976261dce00dba895f2b4ca17dfe21ab42bf4432cd433d0c4f4ab1ef.json  query-f6d669058a817c01c82f0e7db7e0498f14c5a0e10c111ab926bf97eeb49bed7b.json
configuration/: base.yaml  production.yaml
migrations/: 20240630104133_make_status_not_null_in_subscriptions.sql  20240703151119_seed_user.sql
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletter.rs  publish_newsletter.rs  send_newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
